Step B batch 3: migrate Albino, EnslavedSoul, ExplodingSkull, Shielded to json+lua
Albino (Bleeding proc via attackProc), EnslavedSoul (1-in-5 hero-only
random debuff), ExplodingSkull (self-die on hit via attackProc - fires
only on hit, matching java attack() override), Shielded (pure json).
Badges RARE_ALBINO/RARE_SHIELDED checks converted from instanceof to
entityKind via new MobFactory.ALBINO/SHIELDED constants.

Doc: record batch 3 + Step C - quest die() statics hoist is the only
remaining engine blocker; canAttack/attack hooks dropped (act is a
pre-AI policy hook, attackRange json covers ranged); debug harness
notes.